Fixed spacing for Ideas on Profile page and the Browse Ideas page

--- a/client/src/components/Idea/Idea.css
+++ b/client/src/components/Idea/Idea.css
@@ -1,7 +1,7 @@
 .ideaBox {
   border: 1px solid gray;
-  margin: 10px 5px;
+  margin: 10px 10px;
   padding-bottom: 15px;
   padding-top: 0px;
-  background-color: white;
+  background-color: #eeeeee;
 }
